// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Menu /> Default story renders snapshot 1`] = `
<div
  class="menu"
  data-headlessui-state="open"
>
  <button
    aria-controls="headlessui-menu-items-2"
    aria-expanded="true"
    aria-haspopup="true"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--neutral menu__button"
    data-bootstrap-override="clickable-style-secondary"
    data-headlessui-state="open"
    id="headlessui-menu-button-1"
    type="button"
  >
    Documentation Links
    <svg
      aria-hidden="true"
      class="icon menu__button--icon"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      viewBox="0 0 24 24"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 15.3746L6 9.37461L7.4 7.97461L12 12.5746L16.6 7.97461L18 9.37461L12 15.3746Z"
      />
    </svg>
  </button>
  <div
    aria-labelledby="headlessui-menu-button-1"
    class="popover-container menu__popover"
    data-headlessui-state="open"
    data-testid="menu-content"
    id="headlessui-menu-items-2"
    role="menu"
    tabindex="0"
  >
    <a
      class="menu__item"
      data-headlessui-state=""
      href="https://headlessui.com/react/menu#menu-button"
      id="headlessui-menu-item-3"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="popover-list-item"
      >
        <div
          class="popover-list-item__icon"
        >
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            height="1.5rem"
            style="--icon-size: 1.5rem;"
            viewBox="0 0 24 24"
            width="1.5rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11 17H7C5.61667 17 4.43767 16.5123 3.463 15.537C2.48767 14.5623 2 13.3833 2 12C2 10.6167 2.48767 9.43733 3.463 8.462C4.43767 7.48733 5.61667 7 7 7H11V9H7C6.16667 9 5.45833 9.29167 4.875 9.875C4.29167 10.4583 4 11.1667 4 12C4 12.8333 4.29167 13.5417 4.875 14.125C5.45833 14.7083 6.16667 15 7 15H11V17ZM8 13V11H16V13H8ZM13 17V15H17C17.8333 15 18.5417 14.7083 19.125 14.125C19.7083 13.5417 20 12.8333 20 12C20 11.1667 19.7083 10.4583 19.125 9.875C18.5417 9.29167 17.8333 9 17 9H13V7H17C18.3833 7 19.5627 7.48733 20.538 8.462C21.5127 9.43733 22 10.6167 22 12C22 13.3833 21.5127 14.5623 20.538 15.537C19.5627 16.5123 18.3833 17 17 17H13Z"
            />
          </svg>
        </div>
        Headless UI Docs
      </div>
    </a>
    <a
      class="menu__item"
      data-headlessui-state=""
      href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/menu"
      id="headlessui-menu-item-4"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="popover-list-item"
      >
        <div
          class="popover-list-item__icon"
        >
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            height="1.5rem"
            style="--icon-size: 1.5rem;"
            viewBox="0 0 24 24"
            width="1.5rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11 17H7C5.61667 17 4.43767 16.5123 3.463 15.537C2.48767 14.5623 2 13.3833 2 12C2 10.6167 2.48767 9.43733 3.463 8.462C4.43767 7.48733 5.61667 7 7 7H11V9H7C6.16667 9 5.45833 9.29167 4.875 9.875C4.29167 10.4583 4 11.1667 4 12C4 12.8333 4.29167 13.5417 4.875 14.125C5.45833 14.7083 6.16667 15 7 15H11V17ZM8 13V11H16V13H8ZM13 17V15H17C17.8333 15 18.5417 14.7083 19.125 14.125C19.7083 13.5417 20 12.8333 20 12C20 11.1667 19.7083 10.4583 19.125 9.875C18.5417 9.29167 17.8333 9 17 9H13V7H17C18.3833 7 19.5627 7.48733 20.538 8.462C21.5127 9.43733 22 10.6167 22 12C22 13.3833 21.5127 14.5623 20.538 15.537C19.5627 16.5123 18.3833 17 17 17H13Z"
            />
          </svg>
        </div>
        MDN: Menu
      </div>
    </a>
    <a
      class="menu__item"
      data-headlessui-state=""
      id="headlessui-menu-item-5"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="popover-list-item"
      >
        <div
          class="popover-list-item__no-icon"
        />
        Trigger Action
      </div>
    </a>
    <div
      aria-disabled="true"
      class="popover-list-item popover-list-item--disabled"
      data-headlessui-state="disabled"
      id="headlessui-menu-item-6"
      role="menuitem"
    >
      <div
        class="popover-list-item__icon"
      >
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          height="1.5rem"
          style="--icon-size: 1.5rem;"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1 21L12 2L23 21H1ZM11 15H13V10H11V15ZM12 18C12.2833 18 12.521 17.904 12.713 17.712C12.9043 17.5207 13 17.2833 13 17C13 16.7167 12.9043 16.4793 12.713 16.288C12.521 16.096 12.2833 16 12 16C11.7167 16 11.4793 16.096 11.288 16.288C11.096 16.4793 11 16.7167 11 17C11 17.2833 11.096 17.5207 11.288 17.712C11.4793 17.904 11.7167 18 12 18Z"
          />
        </svg>
      </div>
      Not Possible (disabled)
    </div>
  </div>
</div>
`;

exports[`<Menu /> WithLongButtonText story renders snapshot 1`] = `
<div
  class="menu"
  data-headlessui-state="open"
>
  <button
    aria-controls="headlessui-menu-items-8"
    aria-expanded="true"
    aria-haspopup="true"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--neutral menu__button"
    data-bootstrap-override="clickable-style-secondary"
    data-headlessui-state="open"
    id="headlessui-menu-button-7"
    type="button"
  >
    Long Trigger Button Text to Demonstrate Popover Matching
    <svg
      aria-hidden="true"
      class="icon menu__button--icon"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      viewBox="0 0 24 24"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 15.3746L6 9.37461L7.4 7.97461L12 12.5746L16.6 7.97461L18 9.37461L12 15.3746Z"
      />
    </svg>
  </button>
  <div
    aria-labelledby="headlessui-menu-button-7"
    class="popover-container menu__popover"
    data-headlessui-state="open"
    data-testid="menu-content"
    id="headlessui-menu-items-8"
    role="menu"
    tabindex="0"
  >
    <a
      class="menu__item"
      data-headlessui-state=""
      href="https://headlessui.com/react/menu#menu-button"
      id="headlessui-menu-item-9"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="popover-list-item"
      >
        <div
          class="popover-list-item__icon"
        >
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            height="1.5rem"
            style="--icon-size: 1.5rem;"
            viewBox="0 0 24 24"
            width="1.5rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11 17H7C5.61667 17 4.43767 16.5123 3.463 15.537C2.48767 14.5623 2 13.3833 2 12C2 10.6167 2.48767 9.43733 3.463 8.462C4.43767 7.48733 5.61667 7 7 7H11V9H7C6.16667 9 5.45833 9.29167 4.875 9.875C4.29167 10.4583 4 11.1667 4 12C4 12.8333 4.29167 13.5417 4.875 14.125C5.45833 14.7083 6.16667 15 7 15H11V17ZM8 13V11H16V13H8ZM13 17V15H17C17.8333 15 18.5417 14.7083 19.125 14.125C19.7083 13.5417 20 12.8333 20 12C20 11.1667 19.7083 10.4583 19.125 9.875C18.5417 9.29167 17.8333 9 17 9H13V7H17C18.3833 7 19.5627 7.48733 20.538 8.462C21.5127 9.43733 22 10.6167 22 12C22 13.3833 21.5127 14.5623 20.538 15.537C19.5627 16.5123 18.3833 17 17 17H13Z"
            />
          </svg>
        </div>
        Headless UI Docs
      </div>
    </a>
    <a
      class="menu__item"
      data-headlessui-state=""
      href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/menu"
      id="headlessui-menu-item-10"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="popover-list-item"
      >
        <div
          class="popover-list-item__icon"
        >
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            height="1.5rem"
            style="--icon-size: 1.5rem;"
            viewBox="0 0 24 24"
            width="1.5rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11 17H7C5.61667 17 4.43767 16.5123 3.463 15.537C2.48767 14.5623 2 13.3833 2 12C2 10.6167 2.48767 9.43733 3.463 8.462C4.43767 7.48733 5.61667 7 7 7H11V9H7C6.16667 9 5.45833 9.29167 4.875 9.875C4.29167 10.4583 4 11.1667 4 12C4 12.8333 4.29167 13.5417 4.875 14.125C5.45833 14.7083 6.16667 15 7 15H11V17ZM8 13V11H16V13H8ZM13 17V15H17C17.8333 15 18.5417 14.7083 19.125 14.125C19.7083 13.5417 20 12.8333 20 12C20 11.1667 19.7083 10.4583 19.125 9.875C18.5417 9.29167 17.8333 9 17 9H13V7H17C18.3833 7 19.5627 7.48733 20.538 8.462C21.5127 9.43733 22 10.6167 22 12C22 13.3833 21.5127 14.5623 20.538 15.537C19.5627 16.5123 18.3833 17 17 17H13Z"
            />
          </svg>
        </div>
        MDN: Menu
      </div>
    </a>
    <a
      class="menu__item"
      data-headlessui-state=""
      id="headlessui-menu-item-11"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="popover-list-item"
      >
        <div
          class="popover-list-item__no-icon"
        />
        Trigger Action
      </div>
    </a>
    <div
      aria-disabled="true"
      class="popover-list-item popover-list-item--disabled"
      data-headlessui-state="disabled"
      id="headlessui-menu-item-12"
      role="menuitem"
    >
      <div
        class="popover-list-item__icon"
      >
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          height="1.5rem"
          style="--icon-size: 1.5rem;"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1 21L12 2L23 21H1ZM11 15H13V10H11V15ZM12 18C12.2833 18 12.521 17.904 12.713 17.712C12.9043 17.5207 13 17.2833 13 17C13 16.7167 12.9043 16.4793 12.713 16.288C12.521 16.096 12.2833 16 12 16C11.7167 16 11.4793 16.096 11.288 16.288C11.096 16.4793 11 16.7167 11 17C11 17.2833 11.096 17.5207 11.288 17.712C11.4793 17.904 11.7167 18 12 18Z"
          />
        </svg>
      </div>
      Not Possible (disabled)
    </div>
  </div>
</div>
`;

exports[`<Menu /> WithShortButtonText story renders snapshot 1`] = `
<div
  class="menu"
  data-headlessui-state="open"
>
  <button
    aria-controls="headlessui-menu-items-14"
    aria-expanded="true"
    aria-haspopup="true"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--neutral menu__button"
    data-bootstrap-override="clickable-style-secondary"
    data-headlessui-state="open"
    id="headlessui-menu-button-13"
    type="button"
  >
    Menu
    <svg
      aria-hidden="true"
      class="icon menu__button--icon"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      viewBox="0 0 24 24"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 15.3746L6 9.37461L7.4 7.97461L12 12.5746L16.6 7.97461L18 9.37461L12 15.3746Z"
      />
    </svg>
  </button>
  <div
    aria-labelledby="headlessui-menu-button-13"
    class="popover-container menu__popover"
    data-headlessui-state="open"
    data-testid="menu-content"
    id="headlessui-menu-items-14"
    role="menu"
    tabindex="0"
  >
    <a
      class="menu__item"
      data-headlessui-state=""
      href="https://headlessui.com/react/menu#menu-button"
      id="headlessui-menu-item-15"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="popover-list-item"
      >
        <div
          class="popover-list-item__icon"
        >
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            height="1.5rem"
            style="--icon-size: 1.5rem;"
            viewBox="0 0 24 24"
            width="1.5rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11 17H7C5.61667 17 4.43767 16.5123 3.463 15.537C2.48767 14.5623 2 13.3833 2 12C2 10.6167 2.48767 9.43733 3.463 8.462C4.43767 7.48733 5.61667 7 7 7H11V9H7C6.16667 9 5.45833 9.29167 4.875 9.875C4.29167 10.4583 4 11.1667 4 12C4 12.8333 4.29167 13.5417 4.875 14.125C5.45833 14.7083 6.16667 15 7 15H11V17ZM8 13V11H16V13H8ZM13 17V15H17C17.8333 15 18.5417 14.7083 19.125 14.125C19.7083 13.5417 20 12.8333 20 12C20 11.1667 19.7083 10.4583 19.125 9.875C18.5417 9.29167 17.8333 9 17 9H13V7H17C18.3833 7 19.5627 7.48733 20.538 8.462C21.5127 9.43733 22 10.6167 22 12C22 13.3833 21.5127 14.5623 20.538 15.537C19.5627 16.5123 18.3833 17 17 17H13Z"
            />
          </svg>
        </div>
        Headless UI Docs
      </div>
    </a>
    <a
      class="menu__item"
      data-headlessui-state=""
      href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/menu"
      id="headlessui-menu-item-16"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="popover-list-item"
      >
        <div
          class="popover-list-item__icon"
        >
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            height="1.5rem"
            style="--icon-size: 1.5rem;"
            viewBox="0 0 24 24"
            width="1.5rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11 17H7C5.61667 17 4.43767 16.5123 3.463 15.537C2.48767 14.5623 2 13.3833 2 12C2 10.6167 2.48767 9.43733 3.463 8.462C4.43767 7.48733 5.61667 7 7 7H11V9H7C6.16667 9 5.45833 9.29167 4.875 9.875C4.29167 10.4583 4 11.1667 4 12C4 12.8333 4.29167 13.5417 4.875 14.125C5.45833 14.7083 6.16667 15 7 15H11V17ZM8 13V11H16V13H8ZM13 17V15H17C17.8333 15 18.5417 14.7083 19.125 14.125C19.7083 13.5417 20 12.8333 20 12C20 11.1667 19.7083 10.4583 19.125 9.875C18.5417 9.29167 17.8333 9 17 9H13V7H17C18.3833 7 19.5627 7.48733 20.538 8.462C21.5127 9.43733 22 10.6167 22 12C22 13.3833 21.5127 14.5623 20.538 15.537C19.5627 16.5123 18.3833 17 17 17H13Z"
            />
          </svg>
        </div>
        MDN: Menu
      </div>
    </a>
    <a
      class="menu__item"
      data-headlessui-state=""
      id="headlessui-menu-item-17"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="popover-list-item"
      >
        <div
          class="popover-list-item__no-icon"
        />
        Trigger Action
      </div>
    </a>
    <div
      aria-disabled="true"
      class="popover-list-item popover-list-item--disabled"
      data-headlessui-state="disabled"
      id="headlessui-menu-item-18"
      role="menuitem"
    >
      <div
        class="popover-list-item__icon"
      >
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          height="1.5rem"
          style="--icon-size: 1.5rem;"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1 21L12 2L23 21H1ZM11 15H13V10H11V15ZM12 18C12.2833 18 12.521 17.904 12.713 17.712C12.9043 17.5207 13 17.2833 13 17C13 16.7167 12.9043 16.4793 12.713 16.288C12.521 16.096 12.2833 16 12 16C11.7167 16 11.4793 16.096 11.288 16.288C11.096 16.4793 11 16.7167 11 17C11 17.2833 11.096 17.5207 11.288 17.712C11.4793 17.904 11.7167 18 12 18Z"
          />
        </svg>
      </div>
      Not Possible (disabled)
    </div>
  </div>
</div>
`;
